# wrapper-llama

./: .env.example  README.md  pyproject.toml
.kilo/plans/: 1777450393618-quick-cactus.md
examples/: basic_chat.py
src/wrapper_llama/: __init__.py  server.py
